--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         </head>
         <body>
             <h1>Olá Mundo</h1>
+            <h2>Tudo bom?</h2>
+            <h3>texto de apresentação do projeto</h3>
         </body>
     </head>
 </html> 
