Adicionei um texto novo ao arquivo principal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <h1>Olá Mundo</h1>
             <h2>Tudo bom?</h2>
             <h3>texto de apresentação do projeto</h3>
+            <p>Texto novo</p>
         </body>
     </head>
 </html> 
