Tentei consertar a versão azul

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <h2>Tudo bom?</h2>
             <h3>texto de apresentação do projeto</h3>
             <p>Texto novo</p>
+            <p>Para consertar o versão azul</p>
         </body>
     </head>
 </html> 
